<resources>
    <string name="app_name">Secret Customer</string>
    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="registration">Registration</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_hint">Phone</string>
    <string name="back_to_login">Back to login</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="rewarding_program">Rewarding Program</string>
    <string name="withdraw_all">Withdraw All</string>
    <string name="reward_withdrawal">Reward Withdrawal</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="withdraw">Withdraw</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="withdraw_finish_message">Money is on the way!</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="back_to_shops">Back to shops list</string>
    <string name="shops_finish_message">You help to make our shop better</string>
    <string name="shops_finish_thank_you">Thank you!</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="feedback_hint">Feedback</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="goback">Go Back</string>
    <string name="report_hint">Report</string>
    <string name="my_feedback">My Feedback</string>
    <string name="shops">Shops</string>
    <string name="inspect">Inspect   </string>

    <string name="no_email">Enter email</string>
    <string name="no_password">Enter password</string>
    <string name="no_first_name">Enter first name</string>
    <string name="no_last_name">Enter last name</string>
    <string name="user_already_exists_error">User with such email already exists</string>
    <string name="incorrect_phone_pattern">Enter valid phone number</string>
    <string name="wrong_login_data">Incorrect email or password</string>
    <string name="server_not_responding">Server is down</string>
    <string name="successful_registration">User is successfully registered</string>
    <string name="inspection_title">Inspection - Step %1$d of %2$d</string>
    <string name="task_number">Task %1$d:</string>
    <string name="money_amount">You earned %1$.2f coins</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="divider">Divider</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="worst">Worst</string>
    <string name="best">Best</string>
    <string name="shop">Shop</string>
    <string name="exit">Exit</string>
    <string name="smile">Smile</string>
    <string name="shop_name_example">Бахетле</string>
    <string name="shop_address_example">Иннополис, ул. Спортивная, д. 104</string>
    <string name="feedback_example">Quite good but not the best shop in the city…</string>
    <string name="grade">Grade</string>
    <string name="shop_icon">Shop Icon</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="feedback">Feedback</string>
</resources>
